tests/resources/errors/errors17.ac
import std;
import std.Error;

#aborts
struct TestError :: *Error {
    const fn get_name() -> const char* {
        return "TestError";
    }
    const fn get_message() -> const char* {
        return "error raised!";
    }
}

fn foo() | raises TestError {
    raise TestError{};
}

fn main() {
    f: fn() | raises TestError = foo;
    try f();
}